Mon Apr  5 08:28:23 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: make sure files are installed